#!/usr/bin/env python3
"""
E2E Browser Test with Playwright

í”„ë¡ íŠ¸ì—”ë“œì™€ ë°±ì—”ë“œ ì „ì²´ ìŠ¤íƒì„ ì‹¤ì œ ë¸Œë¼ìš°ì €ë¡œ í…ŒìŠ¤íŠ¸í•©ë‹ˆë‹¤.
"""
import asyncio
import sys
from playwright.async_api import async_playwright, Page
import json

async def test_frontend_loaded(page: Page):
    """í”„ë¡ íŠ¸ì—”ë“œ í˜ì´ì§€ê°€ ë¡œë“œë˜ëŠ”ì§€ í…ŒìŠ¤íŠ¸"""
    print("ğŸ“„ Testing frontend page load...")

    await page.goto("http://localhost:5173")
    await page.wait_for_load_state("networkidle")

    title = await page.title()
    print(f"   âœ… Page loaded: {title}")

    # í˜ì´ì§€ ìŠ¤í¬ë¦°ìƒ· ì €ì¥
    await page.screenshot(path="test_screenshots/01_frontend_loaded.png")
    print(f"   ğŸ“¸ Screenshot saved: 01_frontend_loaded.png")

async def test_create_student(page: Page):
    """í•™ìƒ ìƒì„± API í…ŒìŠ¤íŠ¸"""
    print("\nğŸ‘¨â€ğŸ“ Testing student creation...")

    # REST API ì§ì ‘ í˜¸ì¶œ (í”„ë¡ íŠ¸ì—”ë“œ UIê°€ ì—†ëŠ” ê²½ìš°)
    response = await page.request.post(
        "http://localhost:8000/api/v1/students",
        data=json.dumps({
            "name": "Playwright í…ŒìŠ¤íŠ¸ í•™ìƒ",
            "grade": 11,
            "school_id": "TEST_SCHOOL_001"
        }),
        headers={"Content-Type": "application/json"}
    )

    assert response.ok, f"Failed to create student: {response.status}"
    student_data = await response.json()

    print(f"   âœ… Student created: {student_data['name']} (ID: {student_data['id']})")
    return student_data['id']

async def test_weekly_diagnostic(page: Page, student_id: str):
    """ì£¼ê°„ ì§„ë‹¨ ì›Œí¬í”Œë¡œìš° í…ŒìŠ¤íŠ¸"""
    print("\nğŸ“Š Testing Weekly Diagnostic workflow...")

    response = await page.request.post(
        "http://localhost:8000/api/v1/workflows/weekly-diagnostic",
        data=json.dumps({
            "student_id": student_id,
            "curriculum_path": "ì¤‘í•™ìˆ˜í•™.2í•™ë…„.1í•™ê¸°",
            "include_weak_concepts": True
        }),
        headers={"Content-Type": "application/json"}
    )

    assert response.ok, f"Weekly Diagnostic failed: {response.status}"
    result = await response.json()

    print(f"   âœ… Workflow ID: {result['workflow_id']}")
    print(f"   âœ… Questions: {len(result['questions'])} problems")
    print(f"   âœ… Weak concepts: {', '.join(result['weak_concepts'])}")
    print(f"   âœ… Estimated time: {result['total_estimated_time_minutes']} minutes")

    return result

async def test_error_review(page: Page, student_id: str):
    """ì˜¤ë‹µ ë³µìŠµ ì›Œí¬í”Œë¡œìš° í…ŒìŠ¤íŠ¸"""
    print("\nâŒ Testing Error Review workflow...")

    response = await page.request.post(
        "http://localhost:8000/api/v1/workflows/error-review",
        data=json.dumps({
            "student_id": student_id,
            "question_id": "q_test_001",
            "student_answer": "ì˜ëª»ëœ ë‹µë³€",
            "correct_answer": "ì •ë‹µ"
        }),
        headers={"Content-Type": "application/json"}
    )

    assert response.ok, f"Error Review failed: {response.status}"
    result = await response.json()

    print(f"   âœ… Error Note ID: {result['error_note_id']}")
    print(f"   âœ… Next review: {result['next_review_date']}")
    print(f"   âœ… Anki interval: {result['anki_interval_days']} days")
    print(f"   âœ… Analysis: {result['analysis']['misconception']}")

    return result

async def test_learning_path(page: Page, student_id: str):
    """í•™ìŠµ ê²½ë¡œ ìƒì„± ì›Œí¬í”Œë¡œìš° í…ŒìŠ¤íŠ¸"""
    print("\nğŸ—ºï¸  Testing Learning Path workflow...")

    response = await page.request.post(
        "http://localhost:8000/api/v1/workflows/learning-path",
        data=json.dumps({
            "student_id": student_id,
            "target_concept": "ì ë¶„",
            "days": 14
        }),
        headers={"Content-Type": "application/json"}
    )

    assert response.ok, f"Learning Path failed: {response.status}"
    result = await response.json()

    print(f"   âœ… Workflow ID: {result['workflow_id']}")
    print(f"   âœ… Total hours: {result['total_estimated_hours']} hours")
    print(f"   âœ… Learning path:")
    for node in result['learning_path']:
        print(f"      {node['order']}. {node['concept']} ({node['estimated_hours']}h)")

    return result

async def test_exam_prep(page: Page, student_id: str):
    """ì‹œí—˜ ì¤€ë¹„ ì›Œí¬í”Œë¡œìš° í…ŒìŠ¤íŠ¸"""
    print("\nğŸ“ Testing Exam Prep workflow...")

    response = await page.request.post(
        "http://localhost:8000/api/v1/workflows/exam-prep",
        data=json.dumps({
            "student_id": student_id,
            "exam_date": "2026-01-24",
            "school_id": "TEST_SCHOOL_001",
            "curriculum_paths": ["ì¤‘í•™ìˆ˜í•™.2í•™ë…„.1í•™ê¸°"]
        }),
        headers={"Content-Type": "application/json"}
    )

    assert response.ok, f"Exam Prep failed: {response.status}"
    result = await response.json()

    print(f"   âœ… Workflow ID: {result['workflow_id']}")
    print(f"   âœ… Study plan: {len(result['two_week_plan'])} days")
    print(f"   âœ… Focus concepts: {', '.join(result['focus_concepts'])}")
    print(f"   âœ… Mock exam PDF: {result['mock_exam_pdf_url']}")

    # ì²« 3ì¼ í”Œëœ ì¶œë ¥
    print(f"   âœ… First 3 days:")
    for day in result['two_week_plan'][:3]:
        print(f"      Day {day['day_number']}: {', '.join(day['concepts_to_review'])} ({len(day['practice_problems'])} problems)")

    return result

async def test_health_endpoints(page: Page):
    """í—¬ìŠ¤ ì²´í¬ ì—”ë“œí¬ì¸íŠ¸ í…ŒìŠ¤íŠ¸"""
    print("\nğŸ’š Testing health endpoints...")

    # REST API health
    response = await page.request.get("http://localhost:8000/health")
    assert response.ok
    health_data = await response.json()
    print(f"   âœ… REST API: {health_data['status']}, gRPC: {health_data['grpc']}")

    # Root endpoint
    response = await page.request.get("http://localhost:8000/")
    assert response.ok
    root_data = await response.json()
    print(f"   âœ… Service: {root_data['service']}, Version: {root_data['version']}")

async def main():
    """ë©”ì¸ í…ŒìŠ¤íŠ¸ ì‹¤í–‰"""
    print("=" * 80)
    print("ğŸš€ Node 0 Student Hub - E2E Browser Test")
    print("=" * 80)

    async with async_playwright() as p:
        # ë¸Œë¼ìš°ì € ì‹¤í–‰ (headless ëª¨ë“œ)
        browser = await p.chromium.launch(headless=True)
        context = await browser.new_context()
        page = await context.new_page()

        try:
            # ìŠ¤í¬ë¦°ìƒ· ë””ë ‰í† ë¦¬ ìƒì„±
            import os
            os.makedirs("test_screenshots", exist_ok=True)

            # 1. í”„ë¡ íŠ¸ì—”ë“œ ë¡œë“œ í…ŒìŠ¤íŠ¸
            await test_frontend_loaded(page)

            # 2. í—¬ìŠ¤ ì²´í¬
            await test_health_endpoints(page)

            # 3. í•™ìƒ ìƒì„±
            student_id = await test_create_student(page)

            # 4. 4ê°€ì§€ ì›Œí¬í”Œë¡œìš° í…ŒìŠ¤íŠ¸
            await test_weekly_diagnostic(page, student_id)
            await test_error_review(page, student_id)
            await test_learning_path(page, student_id)
            await test_exam_prep(page, student_id)

            print("\n" + "=" * 80)
            print("âœ… All E2E tests passed!")
            print("=" * 80)

        except Exception as e:
            print(f"\nâŒ Test failed: {e}")
            # ì—ëŸ¬ ë°œìƒ ì‹œ ìŠ¤í¬ë¦°ìƒ· ì €ì¥
            await page.screenshot(path="test_screenshots/error.png")
            raise

        finally:
            await browser.close()

if __name__ == "__main__":
    asyncio.run(main())
